1、客户端连接服务端时，服务端会给客户端分配IP地址，无需手动设置；2、添加权限检查，必须以管理员或者root来运行程序

--- a/tapLanSocket/CMakeLists.txt
+++ b/tapLanSocket/CMakeLists.txt
@@ -1,2 +1,6 @@
 aux_source_directory(. TapLanSocket)
 add_library(tapLanSocket ${TapLanSocket})
+if(WIN32)
+find_library(WS2_32_LIBRARY ws2_32)
+target_link_libraries(tapLanSocket ${WS2_32_LIBRARY})
+endif()
