--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,6 @@ set(CMAKE_EXE_LINKER_FLAGS "-static")
 aux_source_directory(. MAIN)
 add_subdirectory(tapLanDrive)
 add_subdirectory(tapLanSocket)
+add_subdirectory(tapLanDHCP)
 add_executable(tapLan ${MAIN})
-target_link_libraries(tapLan tapLanDrive tapLanSocket)
-if(WIN32)
-find_library(WS2_32_LIBRARY ws2_32)
-target_link_libraries(tapLan ${WS2_32_LIBRARY})
-endif()
+target_link_libraries(tapLan tapLanDrive tapLanSocket tapLanDHCP)
