1、支持传输AES加密；2、规范代码

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,6 @@ aux_source_directory(. MAIN)
 add_subdirectory(tapLanDrive)
 add_subdirectory(tapLanSocket)
 add_subdirectory(tapLanDHCP)
+add_subdirectory(tapLanSecurity)
 add_executable(tapLan ${MAIN})
-target_link_libraries(tapLan tapLanDrive tapLanSocket tapLanDHCP)
+target_link_libraries(tapLan tapLanDrive tapLanSocket tapLanDHCP tapLanSecurity)
