cmake file update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,15 +3,15 @@ project(tapLan)
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type" FORCE)
 endif()
+# 设置使用c++11标准
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_EXE_LINKER_FLAGS "-static")
-set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
 aux_source_directory(. MAIN)
 add_subdirectory(tapLanDrive)
 add_subdirectory(tapLanSocket)
 add_subdirectory(tapLanDHCP)
 add_subdirectory(tapLanSecurity)
 add_executable(tapLan ${MAIN})
-target_link_libraries(tapLan tapLanDrive tapLanSocket tapLanDHCP tapLanSecurity)
+target_link_libraries(tapLan PRIVATE tapLanDrive tapLanSocket tapLanDHCP tapLanSecurity)
