修复一些类型错误导致的编译告警，优化CMAKEFILE

--- a/tapLanSecurity/CMakeLists.txt
+++ b/tapLanSecurity/CMakeLists.txt
@@ -1,8 +1,9 @@
 aux_source_directory(. TapLanSecurity)
 add_library(tapLanSecurity ${TapLanSecurity})
+set(OPENSSL_USE_STATIC_LIBS TRUE)
 find_package(OpenSSL REQUIRED)
-target_link_libraries(tapLanSecurity PRIVATE OpenSSL::Crypto OpenSSL::SSL)
 if(WIN32)
-find_library(WS2_32_LIBRARY ws2_32)
-target_link_libraries(tapLanSecurity PRIVATE ${WS2_32_LIBRARY})
+target_link_libraries(tapLanSecurity PUBLIC OpenSSL::Crypto OpenSSL::SSL ws2_32)
+else()
+target_link_libraries(tapLanSecurity PUBLIC OpenSSL::Crypto OpenSSL::SSL)
 endif()
