--- a/tapLanSocket/CMakeLists.txt
+++ b/tapLanSocket/CMakeLists.txt
@@ -2,5 +2,5 @@ aux_source_directory(. TapLanSocket)
 add_library(tapLanSocket ${TapLanSocket})
 if(WIN32)
 find_library(WS2_32_LIBRARY ws2_32)
-target_link_libraries(tapLanSocket PRIVATE ${WS2_32_LIBRARY})
+target_link_libraries(tapLanSocket PUBLIC ${WS2_32_LIBRARY})
 endif()
